--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-store-review": "~9.0.9",
     "nativewind": "^4.2.1",
     "posthog-react-native": "^4.34.0",
     "react": "19.1.0",
